frame/support/test/tests/pallet_ui/genesis_003.stderr
error: `#[pallet::genesis_config]` and `#[pallet::genesis_build]` attributes must be either both used or both not used, instead genesis_config is unused and genesis_build is used
 --> $DIR/genesis_003.rs:2:1
  |
2 | mod pallet {
  | ^^^
